<resources>
    <string name="app_name">Contacts List App</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="showContacts">Contacts List</string>
    <string name="back_to_list">back To List</string>
    <string name="delete">Delete</string>
    <string name="todo">TODO</string>
    <string name="add_contact">Add Contact</string>
</resources>