<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/setName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/setNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/setAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="no"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/save"
            tools:ignore="VisualLintButtonSize" />


        <ImageButton
            android:id="@+id/btnBackToList"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back_to_list"
            android:rotationY="180"
            app:srcCompat="@drawable/arrow_back" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>